--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,55 @@ body {
 #content {
     margin: 5%;
 }
+
+a {
+    color: #fafafa;
+}
+
+a:hover {
+    color: #333;
+    text-decoration: none;
+}
+
+.Login, .Cadastro, .resetPassword {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.Login a {
+    color: #333;
+}
+
+.solicitacao {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.authenticationForm {
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.formItems {
+    display: flex;
+    flex-direction: column;
+}
+
+.formLinks {
+    color: #104a8d;
+    display: flex;
+    justify-content: space-between;
+}
+
+.formLinks:hover {
+    color: #000055;
+}
+
+.simpleCard {
+    height: 50px;
+}
+
